# Students-union

./: Procfile  README.md  README.md.bak  app.py  index.html  main.py  manifest.json  supabase.sql
desktop/: README.md  bridge.py  build.spec  config.py  main.py  network.py  notifier.py  requirements.txt  tray.py
desktop_native/: CMakeLists.txt  README.md  app.manifest  app.rc  backend.cpp  backend.h  config.h  installer.nsi  main.cpp  notifier.cpp  notifier.h  tray.cpp  tray.h
desktop_win32/: CMakeLists.txt  README.md  http_client.cpp  http_client.h  main.cpp  members_window.cpp  members_window.h  resource.h
downloads/: StudentsUnion.apk  StudentsUnion_3.0.310.2.apk  StudentsUnion_3.0.310.6.apk
